--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -18,7 +18,10 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+      <PackageReference Include="Moq" Version="4.20.72" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.33.0" />
+      <PackageReference Include="xunit" Version="2.9.3" />
     </ItemGroup>
 
 </Project>
