--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -18,15 +18,12 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-      <PackageReference Include="Moq" Version="4.20.72" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.22" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.22">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.33.0" />
-      <PackageReference Include="xunit" Version="2.9.3" />
     </ItemGroup>
 
 </Project>
