--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -23,7 +23,8 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.33.0" />
+      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.2" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     </ItemGroup>
 
 </Project>
