[feat] Add Redis to project for cache in ProductRepository

--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -13,6 +13,9 @@
     "Subject": "JWTServiceAccessToken",
     "ExpirationHour": 12
   },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
+  },
   "Modules": [
   ],
   "AllowedHosts": "*"
