--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -24,6 +24,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.2" />
+      <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     </ItemGroup>
 
